# Arc

./: CMakeLists.txt  README.md  todo.txt
dependencies/: bfloat16.hpp  half.hpp  intx.hpp
lib/std/core/: Awaitable.class.arc  Function.struct.arc  Iterable.interface.arc  Iterator.class.arc  List.class.arc  Object.class.arc  Sequence.class.arc  String.class.arc  Symbol.class.arc  bool.class.arc  int.class.arc  owned_ptr.class.arc  ptr.class.arc  shared_ptr.class.arc  unique_ptr.class.arc  weak_ptr.class.arc
lib/std/math/: Mathable.interface.arc
scripts/: build.ps1
src/cli/: CLIArgumentParser.cpp  CLIArgumentParser.h  CLIArguments.h  CLICommand.h  Cli.h  ProgramProcessingCompletionStage.h  ProgramProcessingResult.h  imports.h  main.cpp
src/language/: Arc.h
src/language/emitter/: BytecodeEmitter.cpp  BytecodeEmitter.h  Emitter.h  PycEmitter.cpp  PycEmitter.h  PythonCodeObject.h  PythonCodeObjectFlag.h  WasmBitsize.h  WasmEmitter.cpp  WasmEmitter.h
src/language/importer/: ArcImporter.cpp  ArcImporter.h  DirectoryImportPackage.h  FileImportPackage.h  ImportPackage.h  ImportPackageKind.h  Importer.h
src/language/messages/: ArcLogger.cpp  ArcLogger.h  ErrorId.h  ErrorLogger.h  ErrorMessage.h  Log.h  LogKind.h  LogLevel.h  LoggedMessage.h  Messages.h  logColors.h
src/language/parser/: ASTBuilder.cpp  ASTBuilder.h  ASTBuildingContext.h  ASTIterationCommand.h  ASTIterationExitKind.h  ASTIterator.h  ASTMatcher.cpp  ASTMatcher.h  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  ExpressionKind.h  ExpressionParser.cpp  IRBinaryOperationKind.h  IRBitsizeKind.h  IRProgram.h  (+30 more)
(+200 files in other folders)
